fix white spaces in gallery for big desktop

--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,9 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr); }
+  .s-gallery__img {
+    width: 100%;
+    height: 100%; }
   @media (min-width: 500px) {
     .s-gallery {
       justify-items: center; } }
