--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -323,6 +323,11 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
 
+  &__img {
+    width: 100%;
+    height: 100%;
+  }
+
   @include respond(phone) {
     justify-items: center;
   }
